Runtime.exec(String) deprecated; use other overload. Typos.